--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -31,6 +31,7 @@ TABLE CONTENT
 @import url(../css/vendors/normalize.css);
 @import url(../css/vendors/bootstrap.min.css);
 @import url(../css/vendors/uicons-regular-rounded.css);
+@import url(../css/vendors/uicons-brands.css);
 @import url(../css/plugins/swiper-bundle.min.css);
 @import url(../css/plugins/animate.min.css);
 /*RESET*/
